--- a/assets/css/efficient.css
+++ b/assets/css/efficient.css
@@ -3,3 +3,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.keypad{
+    display: flex;
+}
+.button{
+    color: white;
+    padding: 0.5rem;
+    background-color: grey;
+    border-radius: 0.5rem;
+    margin: 0 0.5rem;
+    text-decoration: none;
+}
