--- a/assets/css/efficient.css
+++ b/assets/css/efficient.css
@@ -3,15 +3,38 @@
     justify-content: center;
     align-items: center;
 }
+.column-flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
 .keypad{
     display: flex;
 }
 .button{
-    color: white;
+    color: grey;
     padding: 0.5rem;
-    background-color: grey;
-    border-radius: 0.5rem;
+    font-weight: bold;
+    background-color: white;
+    /* border-radius: 0.5rem; */
     margin: 0 0.5rem;
     text-decoration: none;
 }
+.limit-container{
+    max-width: 1080px;
+    margin: auto;
+}
+
+row-flex{
+    display: flex;
+}
+
+#contact h2{
+    background-color: white;
+    color: black;
+    padding: 1rem 2rem;
+    width: 150px;
+}
+
