--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,13 +4,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body{
     color: green;
     font-family: 'Montserrat', sans-serif;
-    
+
 }
 header{
     height: 100vh;
@@ -39,9 +40,113 @@ header h1{
 }
 
 header h2{
-    
+
+}
+p{
+    max-width: 1080px;
+}
+
+
+
+
+/*MAIN*/
+main section{
+    padding: 2rem;
+    color:white;
+
+}
+section#intro{
+background: black;
+}
+#intro h2{
+    background-color: white;
+    color: black;
+
+}
+section h2{
+   padding: 0.5rem 1rem;
+    color: white;
+    width: 100px;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+section h3{
+    margin-bottom: 2rem;
+    color:rgb(255, 187, 0)
+}
+section b{
+    font-size: 1.1rem;
+}
+section p{
+    margin: 2rem 0rem;
+
+}
+section#Skills{
+   background-color: white;
 }
 
 footer{
+    background-color: black;
+}
+
+#Skills img{
+    width: 10px;
+    margin: 1rem;
+    height: 120px;
+    width: auto !important;
+}
+#Skills h2{
+    background-color: black;
+    color: white;
+    font-weight: bold;
+
+}
+#Skills h3{
+    padding: 2rem;
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 0rem;
+    /* border-bottom: 10px solid rgba(128, 128, 128, 0.048); */
+    background-color: white;
+    /* width: 200px;
+    margin: auto; */
+    color: rgb(255, 61, 27);
+}
+#Skills h3:first-child{
+    margin-top: 0;
+}
+
+.skills-container{
+    background-color: white;
+    display: flex;
+    max-width: 100vw;
+    flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
+   padding-bottom: 2rem;
+   /* box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.39); */
+}
+.css{
+    height: 150px;
+    width: auto !important;
+}
+.js{
+    height: 150px;
+    width: auto !important;
+}
+.firebase{
+    height: 150px;
+    width: auto !important;
+}
+.flutter{
+    height: 100px !important;
+    width: 150px !important;
+}
+.flutter{
+    height: 100px !important;
+    width: 150px !important;
+}
+section#contact{
     background-color: black;
 }
